# Lima-camera-basler

./: CMakeLists.txt  pom.xml  pom_64_el7.xml
include/: BaslerCamera.h  BaslerInterface.h  BaslerSyncCtrlObj.h
src/: BaslerCamera.cpp  BaslerInterface.cpp  BaslerSyncCtrlObj.cpp
